--- a/arteryschool.html
+++ b/arteryschool.html
@@ -23,7 +23,7 @@
 
     </a>
     <div class="dtc v-mid w-75 w-60-ns tr">
-      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Portfolio">Portfolio</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="arteryschool.html#contact" title="Contact">Contact</a>
     </div>
@@ -46,28 +46,27 @@
 
       <div class="fn fl-ns w-50-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-          nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-          the result of long experience. Now and then they even attain the rank of
-          great artistic achievement. But the art of typesetting stands apart from
-          ex- pressive artwork, because the appeal is not limited to a small
-          circle. It is open to everyone's critical judgment, and nowhere does this
-          judgment carry more weight. Typography that can- not be read by everybody
-          is useless. Even for someone who constantly ponders matters of
-          readability and legibility, it is difficult to determine whether
-          something can be read with ease, but the average reader will rebel at
-          once when the type is too small or otherwise irritates the eye; both are
-          signs of a certain illegibility already.
+          For our final undergraduate project, this design studio focussed on creating an entire visual arts high school as well as its pedagogy. The site for this project was at Carriageworks in Eveleigh, Sydney that sits right next to the train tracks at Redfern Station.<br><br>
+          As an art high school, Eclectic Education and the Collaged College seeks to emphasize the importance of the artistic process as being as important as the final product itself. Taking such a stance leads to certain outcomes, namely being the creation of a series of buildings that differ dramatically in form, texture and spatial experience. Without the provision of dedicated exhibition spaces, the studio spaces in which students and resident artists work become the exhibition spaces. Furthermore, the connection of these differing buildings via the programmatically-constant ARTery, with its provision of both typical building services (water, HVAC, electricity) and atypical services (paint, ink, goods transport), allows the entire site to become a studio space for those who wish to see it that way.
         </p>
 
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
         <p class="f5 lh-copy measure">
-          All typography consists of letters. These appear either in the form of a
-          smoothly running sentence or as an assembly of lines, which may even have
-          contrasting shapes. Good typog- raphy begins, and this is no minor
-          matter, with the typeset- ting of a single line of text in a book or a
-          newspaper. Using exactly the same typeface, it is possible to create either
-          a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-          or too compressed, will spoil almost any typeface.
+          We realised that conducting the usual diagrammatic analysis of the site (public/private space, sight lines, thoroughfare, etc.) was not going to provide any rich or unique understanding of the site, so instead we put all our effort towards creating a manifesto. Displayed on a series of postcards, the captured the essence of what was to be our architecture and pedagogical stance on this visual arts high school.<br>
+          Designed as a series of eight succinct statements, the postcard series served to distill the arguments put forth by our architecture and remove any necessity for the inclusion of text on the primary drawing.<br><br>
+          Our visual arts high school challenged two traditional concepts through its pedagogy: traditional school hours and the concept of years separate by age. School days do not necessarily need to run from 9-3, as creativity and inspiration is not restricted to striking within those hours. Likewise, the potential exists for knowledge to be passed down as well as up, as students mingle and learn in environments not restricted to arbitrary year groups based on date of birth.
+        </p>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Architecture</p>
+        <p class="f5 lh-copy measure">
+          The school consisted of multiple buildings of different architectural styles, each unique and aesthetically disparate housing a specific creative or artistic program within. This in turn with the method of collaging plans and sections from buildings or drawings we admired (Nakagin Capsule Tower or Atelier Bow-Wow's sectional masterpieces to name a few) was the reason behind the name the Collaged College.<br><br>
+          Everything was connected by the Art-ery, a raised walkway that was both an egress route and the supplier of the services required by the buildings such as HVAC, water, electricity, paint and school-wide pneumatic delivery systems. Normally these services are hidden in the ceiling, walls and floors but we wanted to celebrate them making them practical parts of the architecture itself (like handrails).
+        </p>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
+        <p class="f5 lh-copy measure">
+          1:100 (with in-process Site Model at 1:1000)<br><br>
+          Cast cement, aluminium rods, 3D printed roof structure with Spakfilla coating for cast appearance, laser cut acrylic infill, CNC milled foam (Site Model). Designed to highlight the importance of process in the production of art, the Fabrication Lab model was undertaken using processes that inherently highlight process, every little mistake shown in the result of the casting. The deliberately incomplete 1:1000 site model sits within, poised as a project of students' invention, rather than the architects'.
         </p>
       </div>
     </article>
