--- a/errant.html
+++ b/errant.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>FTDi Platform</title>
+  <title>USER INTERFACE & ART DESIGN</title>
   <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,8 +14,8 @@
 
 <body>
 
-  <nav class="dt mw9 w-100 border-box pa3 ph4-ns bb bw2 b--orange">
-    <a class="dtc v-mid dark-gray link hover-orange w-25 w-40-ns" href="index.html" title="Home">
+  <nav class="dt mw9 w-100 border-box pa3 ph4-ns bb bw2 b--silver">
+    <a class="dtc v-mid mid-gray link hover-orange w-25 w-40-ns" href="index.html" title="Home">
       <!-- <img src="logo.jpg" class="dib w2 h2 br-100" alt="Varun Mathew"> -->
       <p class="f4 fw9 sans-serif tl"><!-- &#x221a; -->
         v<span class="dib-l dib-m dn">arun</span><span class="dib">.</span>mat<span class="dib-l dib-m dn">hew</span>
@@ -25,36 +25,43 @@
     <div class="dtc v-mid w-75 w-60-ns tr">
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
-      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="ftdiplatform.html#contact" title="Contact">Contact</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="errant.html#contact" title="Contact">Contact</a>
     </div>
   </nav>
 
-  <div class="vh-75 cover bg-center parallax" style="background-image: url(resources/ftdi_cover.jpg);"></div>
+  <div class="vh-75 cover bg-center parallax" style="background-image: url(resources/errant_cover.png);"></div>
 
   <div class="mw9 center">
 
     <article class="cf ph3 ph5-ns pv5 sans-serif">
       <header class="fn fl-ns w-50-ns pr4-ns">
-        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2 b--orange">
-          FTDi Platform
+        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2 b--silver">
+          UI Consulting and Newsletter Issue Art
         </h1>
         <h2 class="f3 mid-gray lh-title">
-          Tommaso Armstrong, Thomas Aslanian, Isaac Buckton, Varun Mathew, Lily Partridge & Samuel Walker
+          Nikhil Mathew & Varun Mathew
         </h2>
-        <time class="f6 ttu tracked gray">BCII Capstone, 2017</time>
+        <time class="f6 ttu tracked gray">Errant-Labs + The Prolix Post, 2017</time>
       </header>
 
       <div class="fn fl-ns w-50-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          Being part of the Bachelor of Creative Intelligence and Innovation (BCII) has bee unique experience both for the students and staff involved. We are fuelled by creativity and ambition, and we use transdisciplinary knowledge to solve cutting-edge and real world problems. Over the course of this year, we have been developing a platform for the Faculty of Transdisciplinary Innovation (FTDi) to foster the valued connections between students, alumni, staff and industry.<br><br>
-          The idea began as an alumni network to help fourth-year students stay connected and engaged post-graduation. We envisioned a platform that would facilitate alumni professional development with the concept of transdisciplinary knowledge sharing at its core. The idea has since been refined with the scope broadened to accommodate the wider FTDi system. The new concept envisions a hub for FTDi collaboration - a place where students can showcase their projects, staff can collaborate with students, alumni can stay connected, and industry can search for the best new talent. It is more than just a network: it is a transdisciplinary ecosystem.<br><br>
-          In the history of UTS, no faculty has ever successfully collected and analysed the information from the first cohort through to its present years. Being a new degree, FTDi has the unique opportunity  to gather a rich and holistic understanding of the progression of the degrees and graduates from day one.<br><br>
-          Our solution sits between all the stakeholders - it is a complex solution for a complex opportunity space. Each stakeholder has multiple interactions across the system; there is value for everyone. The platform is based off reciprocal and organic exchange. For example, industry has the ability to search for talent, but also collaborate on student projects; conversely, those students can find jobs but also propose new ideas to industry.<br><br>
-          We began this as a self initiated project, but soon found ourselves with a client: the Faculty of Transdisciplinary Innovation. This gave the project a whole new frame of reality as it became a solution to an fresh opportunity. With the real world deliverables came the real world push and all the meetings with other stakeholders within the university body. We suffered setbacks and moments of bliss, but Lily, Sam and myself pumped out a complete vision of the entire site creating every single mockup we could imagine. These mockups also included features that would not make it into the MVP nicknamed the 'dream states' but they were included to provide the full extent of the platform.<br><br>
-          This project is backed and supported by FTDi and we are hoping to launch the MVP by December 2017/January 2018.
-        </p>
+          I was approached by my brother to help redesign the user interface of his website and start creating artworks for his literary newsletter. This was an opportunity for me to start getting real experience with a public facing website and trying to come up with a clean, unique design aesthetic.<br><br>
+          Further this was an opportunity for me to start creating art and illustrations which has been something that I've wanted to do for a while now. I purchased a drawing tablet at the beginning of the year and have been able to make great use of it with the little free time I had during my hectic final year of my undergraduate degree.<br><br>
 
+          My user interface learnings and understandings that has shaped the design of his website include:<br>
+          <ul class="measure lh-copy">
+            <li>Colour palettes and colour design</li><br>
+            <li>Translating typographical concepts from print to web</li><br>
+            <li>Stylistic design decisions that reflect the underlying goal of his work</li>
+          </ul>
+        </p>
       </div>
+
+      <p class="f5 fw6 ttu tracked fs-normal pt3">Issue Artwork</p>
+      <p class="f5 lh-copy measure">
+        Issue 15 | Issue 16 (90% Complete) | Issue 17 (Planned)
+      </p>
     </article>
 
     </div>
