--- a/exchange.html
+++ b/exchange.html
@@ -23,7 +23,7 @@
 
     </a>
     <div class="dtc v-mid w-75 w-60-ns tr">
-      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Portfolio">Portfolio</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="exchange.html#contact" title="Contact">Contact</a>
     </div>
@@ -36,7 +36,7 @@
     <article class="cf ph3 ph5-ns pv5 sans-serif">
       <header class="fn fl-ns w-50-ns pr4-ns">
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2 b--light-pink">
-          Aarhus School of Architecture
+          Material Exploration, Conceptual Architecture & Boathouses
         </h1>
         <h2 class="f3 mid-gray lh-title">
           Varun Mathew
@@ -45,42 +45,42 @@
       </header>
 
       <div class="fn fl-ns w-50-ns">
-        <p class="f5 lh-copy measure mt0-ns">
-          TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-          nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-          the result of long experience. Now and then they even attain the rank of
-          great artistic achievement. But the art of typesetting stands apart from
-          ex- pressive artwork, because the appeal is not limited to a small
-          circle. It is open to everyone's critical judgment, and nowhere does this
-          judgment carry more weight. Typography that can- not be read by everybody
-          is useless. Even for someone who constantly ponders matters of
-          readability and legibility, it is difficult to determine whether
-          something can be read with ease, but the average reader will rebel at
-          once when the type is too small or otherwise irritates the eye; both are
-          signs of a certain illegibility already.
+        <p class="f5 fw6 ttu tracked fs-normal">Material Exploration</p>
+        <p class="f5 lh-copy measure">
+          The first half of the design studio I was a part of at the Aarhus School of Architecture was a material exploration exercise. This was the first experience during my architectural degree of understanding the properties of a material through hands-on use. We were introduced to LECA, a light-weight expanded clay aggregate. These round 'nuts' consist of 85% air due to the expansion process producing a honeycomb structure inside the nut. This gives them incredibly useful properties such as improved insulation, both thermally and auditory.<br>
+          The clay nuts can be combined using a binder, such as cement, to create building blocks or can be used raw for its water-filtering properties or as a foundation filler.
         </p>
 
+        <iframe src="..." width="480" height="360" frameborder="0"></iframe>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Conceptual Project</p>
         <p class="f5 lh-copy measure">
-          All typography consists of letters. These appear either in the form of a
-          smoothly running sentence or as an assembly of lines, which may even have
-          contrasting shapes. Good typog- raphy begins, and this is no minor
-          matter, with the typeset- ting of a single line of text in a book or a
-          newspaper. Using exactly the same typeface, it is possible to create either
-          a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-          or too compressed, will spoil almost any typeface.
+          The second half of the studio was a project brief creating a space for reflection in an area called the Godsbanen. People express themselves in different ways especially when reflecting and I wanted to create an environment that manifests these reflections, enhances these experiences for the reflectee but also observers and that is adaptable to the users needs.
         </p>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
+        <p class="f5 lh-copy measure">
+          Reflection is generally understood to be a solitary or silent act; it is often associated with meditation and religion.<br><br>
+          But why restrict yourself to silence and solitude? To express oneself helps to solidify their thoughts, clear their doubts and form their conclusions.<br><br>
+          Everyone has a different means of reflecting and a space should be able to accommodate for such those who prefer to be alone as well as those who want to be around others. So why not allow the user to create their perfect space?
+        </p>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Modular Architecture</p>
+
+        <blockquote class="sans-serif ml0 mt0 pl4 black-90 bl bw2 b--light-pink">
+          <p class="f6 i lh-copy measure mt0">
+            The grid is mankind's attempt to control and bring order to chaos. We rely on grids to maintain order and we use them daily without knowing - Excel spreadsheets, keyboards, parking spaces, graph paper, rows of iPhone icons, city streets, column layouts, tile floors - the list is endless. But the grid is a backdrop - able to contain dissimilarities and anticipating an action or disruption - a zone of potential.
+          </p>
+          <cite class="f6 ttu tracked fs-normal">&mdash; May, K. 2013, Sci-fi</cite>
+        </blockquote>
+
+        <p class="f5 lh-copy measure">
+          The architecture consisted of modular components with footprints of 10m by 10m and varying heights depending on the services it needed to connect. Each module consisted of hydraulic pumps to shift the floorplates, adjustable ceiling plates via a pulley system, and a retractable wall system. They floorplates also were shaped so that they could align with another floorplate without having a gap that people could fall through. Strung together over a large area, these components created a dynamic landscape through its monolithic presence.
+        </p> 
+
       </div>
     </article>
 
-    <!-- <div class="center">
-      <div class="pa3 center mw6">
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luctus lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luct  lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-        </div>
-      </div> -->
     </div>
 
     <footer class="pv4 ph3 ph5-ns tr bg-dark-gray">
