--- a/finwit.html
+++ b/finwit.html
@@ -23,7 +23,7 @@
 
     </a>
     <div class="dtc v-mid w-75 w-60-ns tr">
-      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Portfolio">Portfolio</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="finwit.html#contact" title="Contact">Contact</a>
     </div>
@@ -46,41 +46,22 @@
 
       <div class="fn fl-ns w-50-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-          nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-          the result of long experience. Now and then they even attain the rank of
-          great artistic achievement. But the art of typesetting stands apart from
-          ex- pressive artwork, because the appeal is not limited to a small
-          circle. It is open to everyone's critical judgment, and nowhere does this
-          judgment carry more weight. Typography that can- not be read by everybody
-          is useless. Even for someone who constantly ponders matters of
-          readability and legibility, it is difficult to determine whether
-          something can be read with ease, but the average reader will rebel at
-          once when the type is too small or otherwise irritates the eye; both are
-          signs of a certain illegibility already.
-        </p>
-
-        <p class="f5 lh-copy measure">
-          All typography consists of letters. These appear either in the form of a
-          smoothly running sentence or as an assembly of lines, which may even have
-          contrasting shapes. Good typog- raphy begins, and this is no minor
-          matter, with the typeset- ting of a single line of text in a book or a
-          newspaper. Using exactly the same typeface, it is possible to create either
-          a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-          or too compressed, will spoil almost any typeface.
+          At the beginning of 2017, Choice provided us with a brief to choose an issue or problem space of our choosing, and deliver a product or service to address it. An open brief might seem liberating, but it is harder to land on your feet because nothing necessarily restricts you. After quickly trialling out problems spaces and solutions, we decided to tackle the broader societal issue of 'short termism' - where decisions are made without consideration of long term consequences. This led us to the topic of financial literacy, where we began to explore how we could simulate a full lifespan in a short period of time.<br><br>
+          After researching this topic we realised just how prevalent the issue is for both adults and youth. But we decided, given our own age as well as the breadth of support available for adults already, that targeting 15-18 year olds just about to take their first steps into the world of finance, was our best point of intervention. We wanted to give them the confidence to make smart decisions, to stand up for themselves, and to know the risks associated with their choices.<br><br>
+          We wanted to produce something game-like, to engage the demographic and to simulate a lifetime of financial interactions. And we wanted it to not be tech focussed, to make a case for non-tech innovation. But we did not want to just work towards a proof of concept, we wanted to complete the project with a sense of pride and accomplishment by having it ready for market.<br><br></p>
+        <p class="f4 measure lh-title">Introducing FinWit, the financial literacy board games for high school students.</p>
+        <p class="f5 lh-copy measure mt0-ns">
+          The game challenges students to answer questions related to financial literacy is order to win money (point system). When they collect enough they can pass through a gate and move to an inner tier. The first to the middle wins. The game features lightning rounds, answering true or false questions in 30 seconds, multiple choice questions and gate round question, articulating a financial concept in 15 seconds without using the words in the game.<br><br>
+          FinWit features 5 key financial topics: superannuation, investments, banks, loans, and tax. These were selected to align with the OECD's financial education expectations and the report 'Australians understanding money' by the governmental organisation Financial Literacy Australia. It is our understanding from research and testing that a basic understanding of these 5 topics will leave students prepared to interact with the financial sphere.<br><br>
+          We wanted every student, regardless of their family's socio-economic status, to access financial literacy through our game - so it is designed to be played in a competitive classroom environment over 1 class period of about 45 minutes. It can be played with 3-5 students, and is designed to increase financial literacy with a unique and interesting balance of education and gamification.<br><br>
+          Through testing at three schools we already have keen interest from students and teachers alike. Creating additional content packs, especially syllabus related content presents an opportunity for the development board game to continue.<br><br>
+          Introducing board games as a 'game changer' is a fun and interactive way to address the disconnect between youth and the financial ecosystem. At the moment, students are receiving varying degrees of inputs from their households, teachers and financial institutions. This can leave them with contradictions, more confused than necessary. Our game disrupts because it promotes peer learning with social motivation between the group members, which many studies have proven to be far more powerful than didactic teaching. Students who engage with each other are more likely to continue engaging with topics individually.<br><br>
+          By integrating accessible and interactive technology into classroom learning, we are attempting to break the stigma against smartphones in the classroom by treating mature students as adults. But as well as disrupting the education and information systems, we're attempting to change the cycle for many students. Targeting students where they begin to enter the financial sphere means that the lessons learned from FinWit are directly applicable and will have a lasting impact. We are compensating for the discussion of financial literacy in a domestic setting.<br><br>
+          We are currently researching manufacturing costs and receiving quotes from companies both in Australia and abroad. Keep a eye out, FinWit might be hitting a school near you soon.
         </p>
       </div>
     </article>
 
-    <!-- <div class="center">
-      <div class="pa3 center mw6">
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luctus lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luct  lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-        </div>
-      </div> -->
     </div>
 
     <footer class="pv4 ph3 ph5-ns tr bg-dark-gray">
