--- a/legacy.html
+++ b/legacy.html
@@ -23,7 +23,7 @@
 
     </a>
     <div class="dtc v-mid w-75 w-60-ns tr">
-      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Portfolio">Portfolio</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="legacy.html#contact" title="Contact">Contact</a>
     </div>
@@ -46,41 +46,35 @@
 
       <div class="fn fl-ns w-50-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-          nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-          the result of long experience. Now and then they even attain the rank of
-          great artistic achievement. But the art of typesetting stands apart from
-          ex- pressive artwork, because the appeal is not limited to a small
-          circle. It is open to everyone's critical judgment, and nowhere does this
-          judgment carry more weight. Typography that can- not be read by everybody
-          is useless. Even for someone who constantly ponders matters of
-          readability and legibility, it is difficult to determine whether
-          something can be read with ease, but the average reader will rebel at
-          once when the type is too small or otherwise irritates the eye; both are
-          signs of a certain illegibility already.
+          My legacy project was conducting an elective on 'Developing Technical Skills for your Portfolio' as part of Professional Practice at the Cutting Edge (PPCE). I recognised the growing importance to have the ability to show future employers what we do as transdisciplinary students. Having made physical portfolios in the past, I find that web portfolios and web presence in general have a wider reach and greater visibility in real-time. With this objective in mind, I designed this elective for 4th Year BCII students as a tool to market their transdisciplinary skills and enhance their career prospects. I specifically designed the elective to be universally applicable and thereby have a continued impact on the Faculty of Transdisciplinary Innovation (FTDI) sphere.
         </p>
 
         <p class="f5 lh-copy measure">
-          All typography consists of letters. These appear either in the form of a
-          smoothly running sentence or as an assembly of lines, which may even have
-          contrasting shapes. Good typog- raphy begins, and this is no minor
-          matter, with the typeset- ting of a single line of text in a book or a
-          newspaper. Using exactly the same typeface, it is possible to create either
-          a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-          or too compressed, will spoil almost any typeface.
+          While designing the elective, I took into consideration that people are from different disciplinary backgrounds and have different levels of understanding. To achieve a broad impact, my aim was to make it universally accessible for novices from any background i.e. for future BCII students and staff, other degrees within and outside FTDI, as well as for industry partners. 
         </p>
+
+        <p class="f5 lh-copy measure">
+          The elective was designed as a practical tutorial where the hands-on aspect meant it was ideal for people to 'learn by doing'. This experience along with the inclusion of templates at the end helped in achieving a deep impact where the interactive learning could continue beyond the class. The structure and order of the elective was specifically designed to introduce one concept at a time to not overload or overwhelm those taking part. It was ideal because people could understand exactly how each line of code began to influence the end result i.e. viewing the output in real time.<br>
+          The structure of the tutorial was certainly well received, further highlighting the deep impact of this elective:
+          <blockquote class="sans-serif ml0 mt0 pl4 black-90 bl bw2 b--blue">
+            <p class="f6 i lh-copy measure mt0">
+              Practical. Live help. Simple steps.<br><br>
+              The teaching method was great! The use of visuals on the board as well as live streaming allowed me to follow what we were doing it and outlined what we were aiming to achieve.<br><br>
+              This lesson [had] a great layout and I've learnt a lot.<br><br>
+              You did an amazing job at breaking down the key concepts and taking us on the journey.
+            </p>
+          </blockquote>
+        </p>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">What I Learnt</p>
+        <p class="f5 lh-copy measure">
+          I realised that I underestimated how much time a simple task could take as everyone learns and understands at a different rate. One of the first tasks was to download and install a program, and as soon as I realised how difficult that was for some people, I had to completely reshuffle the pace that I had initially set out. This meant having to cut out a portion of the walkthrough for creating a third web page as I could see that this would have overwhelmed some.<br><br>
+          The main feedback received, indicated that follow-up classes would be beneficial. I believe this is valuable, because trying to fit this content into the space of 2 to 3 hours is too rushed, but with additional classes you can expand and continue to build on the topics covered. I probably had made enough content for 3 lessons, but because this was an experimental student-run elective class, these are the realisations that needed to come out of this lesson.
+        </p>
+
       </div>
     </article>
 
-    <!-- <div class="center">
-      <div class="pa3 center mw6">
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luctus lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luct  lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-        </div>
-      </div> -->
     </div>
 
     <footer class="pv4 ph3 ph5-ns tr bg-dark-gray">
