--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -23,7 +23,7 @@
 
     </a>
     <div class="dtc v-mid w-75 w-60-ns tr">
-      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Portfolio">Portfolio</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
       <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="microcitylibrary.html#contact" title="Contact">Contact</a>
     </div>
@@ -46,41 +46,49 @@
 
       <div class="fn fl-ns w-50-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          TYPOGRAPHY, even when poorly executed, can never be taken for granted;
-          nor is it ever accidental. Indeed, beauti- fully typeset pages are always
-          the result of long experience. Now and then they even attain the rank of
-          great artistic achievement. But the art of typesetting stands apart from
-          ex- pressive artwork, because the appeal is not limited to a small
-          circle. It is open to everyone's critical judgment, and nowhere does this
-          judgment carry more weight. Typography that can- not be read by everybody
-          is useless. Even for someone who constantly ponders matters of
-          readability and legibility, it is difficult to determine whether
-          something can be read with ease, but the average reader will rebel at
-          once when the type is too small or otherwise irritates the eye; both are
-          signs of a certain illegibility already.
+          This design studio heavily revolved around the biological terms: genotypes and phenotypes. We used their meanings as a way to abstract and understand precedent buildings and then apply it to our own projects. We applied this process to reveal the genotype, or building blocks, of an architectural library precedent: the DNA of a building, the core abstract concepts that it is trying to convey. Then came the application of these realisations, the visual representations  (phenotype) of the 'building blocks' to create a new architecture - a library.<br><br>
+          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole.<br><br>
+          What happens when the library becomes a condition within the city?<br><br>
+          We were not designing a finished library but rather a system; a protocol for growth.
         </p>
 
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
         <p class="f5 lh-copy measure">
-          All typography consists of letters. These appear either in the form of a
-          smoothly running sentence or as an assembly of lines, which may even have
-          contrasting shapes. Good typog- raphy begins, and this is no minor
-          matter, with the typeset- ting of a single line of text in a book or a
-          newspaper. Using exactly the same typeface, it is possible to create either
-          a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-          or too compressed, will spoil almost any typeface.
+          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
         </p>
+
+        <blockquote class="sans-serif ml0 mt0 pl4 black-90 bl bw2 b--gold">
+          <p class="f6 i lh-copy measure mt0">
+            As a reflection of the city it exists within, the Library of the 21st century must be one of adaptation. As such, what we propose is not a radical change or redefinition of the library typology, but a distillation of its individual programmatic elements that are connected through a network of corridors, laneways and thoroughfares that allow each space to be experienced and altered independently, prompting the curiosity of its users.<br><br>
+            A room with an exhibition;<br>
+            A room with a librarian;<br>
+            A room with storage;<br>
+            A room with a restaurant<br><br>
+            But what about the books?<br><br>
+            The books, the heart of any Library, will be pushed to the exterior of each independent program, encasing the phenomena inside and allowing the users to choose their own adventure.
+          </p>
+          <cite class="f6 ttu tracked fs-normal">&mdash; Group 1</cite>
+        </blockquote>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Architecture</p>
+        <p class="f5 lh-copy measure">
+          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
+        </p>
+
+        <p class="f5 fw6 ttu tracked fs-normal pt3">Model</p>
+        <p class="f5 lh-copy measure">
+          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
+        </p>
+
+        <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" width="480" height="360" frameborder="0"></iframe>
+      
       </div>
     </article>
 
-    <!-- <div class="center">
-      <div class="pa3 center mw6">
+    </div>
 
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luctus lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-          <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luct  lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
-
-        </div>
-      </div> -->
+    <div class="center">
+      
     </div>
 
     <footer class="pv4 ph3 ph5-ns tr bg-dark-gray">
